--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color: lightgrey;
+    background-color: white;
     margin-top: 75px;
 }
 
@@ -19,4 +19,13 @@ body {
 .img-medium {
     height: 200px;
 }
+.container{
+	width : 1000px;
+  	Font-family : sans-serif;
+  	padding-top: 20px;
+  	padding-right :20px;
+  	padding-left:20px;
+	margin : auto;
+	color:grey;
+	   }	
 
